--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: ProjectEU_Dart
 description: A web app that uses AngularDart Components
 version: 0.0.1
-#homepage: https://www.example.com
-#author: Martin <email@example.com>
+#homepage: vykend.github.io/Dictionary
+#author: Martin Výlet
 
 environment:
-  sdk: '>=1.23.0 <2.0.0'
+  sdk: '>=1.24.1 <2.0.0'
 
 dependencies:
   angular2: ^3.0.0
